Happy Anniversary: Rename class name to avoid conflicts

--- a/happyanniversary/styles/all/template/event/index_body_stat_blocks_after.html
+++ b/happyanniversary/styles/all/template/event/index_body_stat_blocks_after.html
@@ -1,5 +1,5 @@
 {% if HAPPY_ANNIVERSARY_TEXT %}
-<div class="stat-block birthday-list">
+<div class="stat-block anniversary-list">
 	<h3>{{ lang('HAPPY_ANNIVERSARY') }}</h3>
 	<p>{{ HAPPY_ANNIVERSARY_TEXT }}</p>
 </div>
