--- a/emojipicker/styles/all/template/event/overall_footer_body_after.html
+++ b/emojipicker/styles/all/template/event/overall_footer_body_after.html
@@ -4,7 +4,7 @@
 <script>
 	$(document).ready(function()
 	{
-		$('textarea#message, textarea#signature').emojioneArea({
+		$('div#message-box > textarea').emojioneArea({
 			attributes: {
 				dir: '{{ S_CONTENT_DIRECTION }}'
 			},
@@ -54,8 +54,9 @@
 			if ($('div.emojionearea').length)
 			{
 				$('div.emojionearea').css({
-					'height': $('textarea#message').css('height') || $('textarea#signature').css('height')
+					'height': $('div#message-box > textarea').css('height')
 				});
+
 				clearInterval(checkExist);
 			}
 		}, 100);
