Emoji Picker: Use minified JS in production

--- a/emojipicker/styles/all/template/event/overall_footer_body_after.html
+++ b/emojipicker/styles/all/template/event/overall_footer_body_after.html
@@ -1,5 +1,5 @@
 <!-- INCLUDECSS @vinabb_emojipicker/emojionearea.min.css -->
-<!-- INCLUDEJS @vinabb_emojipicker/emojionearea.js -->
+<!-- INCLUDEJS @vinabb_emojipicker/emojionearea.min.js -->
 <!-- INCLUDEJS @vinabb_emojipicker/jquery.caret.min.js -->
 
 <script>
