Emoji Picker: Apply changes from v0.2.2

--- a/emojipicker/styles/all/template/event/overall_header_head_append.html
+++ b/emojipicker/styles/all/template/event/overall_header_head_append.html
@@ -1,3 +1,4 @@
 <!-- INCLUDECSS @vinabb_emojipicker/emojionearea.min.css -->
-<!-- INCLUDEJS @vinabb_emojipicker/emojionearea.min.js -->
 <!-- INCLUDECSS @vinabb_emojipicker/emojione.min.css -->
+<!-- INCLUDEJS @vinabb_emojipicker/emojionearea.min.js -->
+<!-- INCLUDEJS @vinabb_emojipicker/jquery.caret.min.js -->
