--- a/emojipicker/styles/all/template/event/overall_footer_body_after.html
+++ b/emojipicker/styles/all/template/event/overall_footer_body_after.html
@@ -102,6 +102,7 @@
 			pickerPosition: 'bottom',
 			filtersPosition: 'bottom',
 			buttonTitle: "{{ lang('EMOJI_BUTTON_EXPLAIN')|e('js') }}",
+			placeholder: '{{ (lang('MESSAGE') ~ lang('ELLIPSIS'))|e('js') }}',
 			filters: {
 				tones: {
 					title: "{{ lang(['EMOJI_CATS', 'TONES'])|e('js') }}"
