Emoji Picker: Move remote JS files to local

--- a/emojipicker/styles/all/template/event/overall_footer_body_after.html
+++ b/emojipicker/styles/all/template/event/overall_footer_body_after.html
@@ -1,6 +1,8 @@
 <!-- INCLUDECSS @vinabb_emojipicker/emojionearea.min.css -->
-<!-- INCLUDEJS @vinabb_emojipicker/emojionearea.min.js -->
 <!-- INCLUDEJS @vinabb_emojipicker/jquery.caret.min.js -->
+<!-- INCLUDEJS @vinabb_emojipicker/jquery.textcomplete.min.js -->
+<!-- INCLUDEJS @vinabb_emojipicker/emojione.min.js -->
+<!-- INCLUDEJS @vinabb_emojipicker/emojionearea.min.js -->
 
 <script>
 	/** global bbtags */
