--- a/emojipicker/styles/all/template/event/overall_footer_body_after.html
+++ b/emojipicker/styles/all/template/event/overall_footer_body_after.html
@@ -1,3 +1,5 @@
+{% if S_IN_POSTING or S_COMPOSE_PM or S_QUICK_REPLY or SIGNATURE_PREVIEW is defined %}
+
 <!-- INCLUDECSS @vinabb_emojipicker/emojionearea.min.css -->
 <!-- INCLUDEJS @vinabb_emojipicker/jquery.caret.min.js -->
 <!-- INCLUDEJS @vinabb_emojipicker/jquery.textcomplete.min.js -->
@@ -324,3 +326,5 @@
 		{% endif %}
 	})(document, window, jQuery);
 </script>
+
+{% endif %}
