Emoji Picker: Move remote JS files to local

--- a/emojipicker/styles/all/template/event/overall_header_head_append.html
+++ b/emojipicker/styles/all/template/event/overall_header_head_append.html
@@ -1,4 +1,7 @@
-<!-- INCLUDECSS @vinabb_emojipicker/emojionearea.min.css -->
 <!-- INCLUDECSS @vinabb_emojipicker/emojione.min.css -->
-<!-- INCLUDEJS @vinabb_emojipicker/emojionearea.min.js -->
+<!-- INCLUDECSS @vinabb_emojipicker/emojionearea.min.css -->
+
 <!-- INCLUDEJS @vinabb_emojipicker/jquery.caret.min.js -->
+<!-- INCLUDEJS @vinabb_emojipicker/jquery.textcomplete.min.js -->
+<!-- INCLUDEJS @vinabb_emojipicker/emojione.min.js -->
+<!-- INCLUDEJS @vinabb_emojipicker/emojionearea.min.js -->
