--- a/emojipicker/styles/all/template/event/overall_footer_body_after.html
+++ b/emojipicker/styles/all/template/event/overall_footer_body_after.html
@@ -1,3 +1,4 @@
+{% if S_IN_POSTING or S_COMPOSE_PM or S_QUICK_REPLY or SIGNATURE_PREVIEW is defined %}
 
 <script>
 	/** global bbtags */
@@ -320,3 +321,5 @@
 		{% endif %}
 	})(document, window, jQuery);
 </script>
+
+{% endif %}
