--- a/emojipicker/styles/all/template/event/overall_header_head_append.html
+++ b/emojipicker/styles/all/template/event/overall_header_head_append.html
@@ -1,6 +1,8 @@
 <!-- INCLUDECSS @vinabb_emojipicker/emojione.min.css -->
 
-{% if S_IN_POSTING or S_COMPOSE_PM or S_QUICK_REPLY or SIGNATURE_PREVIEW is defined %}
+{% set S_DMZX_MCHAT = MCHAT_INDEX and MCHAT_LOCATION is defined %}
+
+{% if S_IN_POSTING or S_COMPOSE_PM or S_QUICK_REPLY or SIGNATURE_PREVIEW is defined or S_DMZX_MCHAT %}
 
 <!-- INCLUDECSS @vinabb_emojipicker/emojionearea.min.css -->
 <!-- INCLUDEJS @vinabb_emojipicker/jquery.caret.min.js -->
