--- a/emojipicker/styles/all/template/event/overall_footer_body_after.html
+++ b/emojipicker/styles/all/template/event/overall_footer_body_after.html
@@ -1,4 +1,5 @@
 {% set S_DMZX_MCHAT = MCHAT_INDEX and MCHAT_LOCATION is defined %}
+{% set S_BOARDTOOLS_QUICKREPLY = S_QR_QUICKQUOTE_ENABLE is defined %}
 
 {% if S_IN_POSTING or S_COMPOSE_PM or S_QUICK_REPLY or SIGNATURE_PREVIEW is defined or S_DMZX_MCHAT %}
 
@@ -105,6 +106,10 @@
 			'position': 'absolute',
 			'z-index': 1
 		});
+		{% endif %}
+
+		{% if S_BOARDTOOLS_QUICKREPLY %}
+		$('div#register-and-translit').remove();
 		{% endif %}
 
 		// Set the attribute data-emojipicker="true" to load Emoji Picker on other extensions
@@ -361,7 +366,7 @@
 		};
 		{% endif %}
 
-		{% if S_DMZX_MCHAT %}
+		{% if S_DMZX_MCHAT or S_BOARDTOOLS_QUICKREPLY %}
 		insert_text = function(text)
 		{
 			$('div.emojionearea-editor').focus();
