Emoji Picker: Add Advanced BBCode Box support

--- a/emojipicker/styles/all/template/event/overall_footer_body_after.html
+++ b/emojipicker/styles/all/template/event/overall_footer_body_after.html
@@ -1,5 +1,6 @@
 {% set S_DMZX_MCHAT = MCHAT_INDEX and MCHAT_LOCATION is defined %}
 {% set S_BOARDTOOLS_QUICKREPLY = S_QR_QUICKQUOTE_ENABLE is defined %}
+{% set S_VSE_ABBC3 = ABBC3_BBCODE_ICONS is defined %}
 
 {% if S_IN_POSTING or S_COMPOSE_PM or S_QUICK_REPLY or SIGNATURE_PREVIEW is defined or S_DMZX_MCHAT %}
 
@@ -19,6 +20,7 @@
 		*	<button name="addbbcode*"...
 		*	<button name="addlistitem"...
 		*/
+		{% if not S_VSE_ABBC3 %}
 		$('input[name^="addbbcode"]').each(function()
 		{
 			var bbcodeIndex = parseInt($(this).attr('onclick').replace('bbstyle(', '').replace(')', ''));
@@ -40,6 +42,7 @@
 
 			$(this).removeAttr('onclick');
 		});
+		{% endif %}
 
 		// Color picker
 		$('a[data-color]').each(function()
@@ -361,7 +364,7 @@
 		};
 		{% endif %}
 
-		{% if S_DMZX_MCHAT or S_BOARDTOOLS_QUICKREPLY %}
+		{% if S_DMZX_MCHAT or S_BOARDTOOLS_QUICKREPLY or S_VSE_ABBC3 %}
 		insert_text = function(text)
 		{
 			$('div.emojionearea-editor').focus();
